modify structure to report response
