# ded-msa-account-movement/src/main/java/com/nttdata/accountmovement/domain/MovementReportResponse.java
@@ -17,8 +17,8 @@ import lombok.experimental.FieldDefaults;
 @AllArgsConstructor
 @Generated
 @FieldDefaults(level = AccessLevel.PRIVATE)
-public class MovementReport {
+public class MovementReportResponse {
 
-  Account account;
-  List<Movement> movements;
+  Customer customer;
+  List<MovementReport> accountMovements;
 }
